fix: add vertical align prop on table data and header

--- a/packages/design/tailwind/css/components/table.css
+++ b/packages/design/tailwind/css/components/table.css
@@ -4,7 +4,7 @@
 
 .gi-table-th,
 .gi-table-td {
-  @apply gi-align-middle gi-pl-1 gi-pr-5 gi-py-2.5 gi-border-b-[gray] gi-border-b gi-border-solid;
+  @apply gi-pl-1 gi-pr-5 gi-py-2.5 gi-border-b-[gray] gi-border-b gi-border-solid;
 }
 
 .gi-table-caption-text {
